2004-03-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp: Add new tests for versioned weak
	definition. 

	* ld-elfvers/vers28a.c: New file.
	* ld-elfvers/vers28a.dsym: Likewise.
	* ld-elfvers/vers28a.ver: Likewise.
	* ld-elfvers/vers28b.c: Likewise.
	* ld-elfvers/vers28b.dsym: Likewise.
	* ld-elfvers/vers28b.map: Likewise.
	* ld-elfvers/vers28b.ver: Likewise.
	* ld-elfvers/vers28c.c: Likewise.
	* ld-elfvers/vers28c.dsym: Likewise.
	* ld-elfvers/vers28c.ver: Likewise.

2004-03-19  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/provide-2.d: Ignore random symbols.

2004-03-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tls.d: Update.
	* ld-powerpc/tls32.d: Update.
	* ld-powerpc/tlsexe.d: Update.
	* ld-powerpc/tlsexe32.d: Update.
	* ld-powerpc/tlsexetoc.d: Update.
	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlsso32.d: Update.
	* ld-powerpc/tlstoc.d: Update.
	* ld-powerpc/tlstocso.d: Update.

2004-03-05  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/size-1.d: Add bigendian regexps.
	* ld-scripts/size-2.d: Set --wide for readelf.

	* ld-scripts/size.exp: New.
	* ld-scripts/size-[12].{d,s,t}: New.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* ld-frv/fr450-link[abc].s, fr450-link.d: New test.
	* ld-frv/frv.exp: New harness.

2004-02-24  Alexandre Oliva  <aoliva@redhat.com>

	* ld-frv/fdpic-pie-2.d: Adjust for decay of FUNCDESC relocs that
	bind locally.
	* ld-frv/fdpic-pie-8.d: Likewise.
	* ld-frv/fdpic-shared-4.d: Likewise.
	* ld-frv/fdpic-pie-6-fail.d: Renamed from...
	* ld-frv/fdpic-pie-6.d: New test.
	* ld-frv/fdpic-shared-6-fail.d: Renamed from...
	* ld-frv/fdpic-shared-6.d: New test.
	* ld-frv/fdpic6.ldv: New.
	* ld-frv/fdpic-static-6.d: Adjust test name.
	* ld-frv/fdpic-pie-8-fail.d: Removed.
	* ld-frv/fdpic.exp: Run new tests.

2004-02-23  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/provide.exp: New.
	* ld-scripts/provide-{1,2,3}.{s,t,d}.exp: New.

2004-02-23  Alan Modra  <amodra@bigpond.net.au>
